# PicaBot

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
picabot/: __init__.py  picabot.py
